Added CobaltBlog_main_index_title setting Expanded readme to make it more useful Added version 0.2 to roadmap

--- a/config.json
+++ b/config.json
@@ -32,6 +32,9 @@
         },
         "CobaltBlog_index_limit": {
             "default": 5
+        },
+        "CobaltBlog_main_index_title": {
+            "default": "Blog Home"
         }
     },
     "permissions": {
